[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/deathguy_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/screen/tutorial_screen.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=3]

[node name="TutorialScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.368627, 0.368627, 0.886275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 560.0
margin_bottom = 1036.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CenterContainer"]
margin_top = 238.0
margin_right = 560.0
margin_bottom = 798.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 560, 560 )
bbcode_enabled = true

[node name="NextButton" type="Button" parent="VBoxContainer"]
margin_left = 79.0
margin_top = 1040.0
margin_right = 479.0
margin_bottom = 1120.0
rect_min_size = Vector2( 400, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next!"

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -16.0
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
